# yinxing

./: .gitignore  .npmignore  .travis.yml  README.md  config.toml  index.js  package.json  setup.sh  update_version.js
.github/workflows/: main.yml
ajax/: index.js  ua.js
baidu/body/: index.js  readme.md
baidu/easydl/: easydl.js
baidu/face/: index.js  readme.md
baidu/imageProcess/: imageProcess.js
baidu/imageSearch/: imageSearch.js
baidu/imagerecognition/: code.json  index.js  readme.md  test.js  test_sdk.js
baidu/intelligentwriting/: ..contentCensor  index.js  readme.md
baidu/kg/: kg.js
baidu/lbs/: yingyan.js
baidu/nlp/: nlp.js  readme.md
baidu/ocr/: index.js  readme.md
baidu/sign/: readme.md
baidu/speech/: index.js  readme.md  t.txt  voice.json
cache/: index.js  redis-test.js  redis.js
cos/: cos.md  index.js  list.json  readme.md  sts.js  sts.json
curd_template/: index.js
db/: dict.js  mongo-code.md  mongo-seed.sh  mongo-test.js  mongo.js  pinyin.js  seq.js  sqlite1.js  sqlite2json.js  test.sqlite  test_mongo.js
db/mongo/: readme.md
db/mongo/rust/: Cargo.toml
db/mongo/rust/src/: main.rs
encode/: captcha.js  crypto.js  index.js  readme.md  string.js  test.js  test_sign.js  wx.js
example/: .travis.yaml  index.js  init.js  readme.md  test.toml
example/app/: readme.md
example/captcha/: sms.js
example/coupon/: readme.md
example/crud/: client.js  crud.js  index.js  middleware.js  router.js
example/msgpack/: dep.js  index.js  pack.js  package.json  readme.md
example/protobuf/: e.js  index.js  test.js  test1.js  zzz.json  zzz.txt
example/role/: readme.md
example/sign/: readme.md
example/token/: token.js
example/upload/: index.js  readme.md
example/user/: index.js  init.js  init_db.js  middleware.js  package.json  readme.md  router.js  start.sh  test.sh  upload.js  user_basic.js  validator.js
ff-push/: client.html  index.js  sw.js
fp/: extend.js  index.js  l.js  md.js  mime.js  q.js  r.js  rule.js  sku.js  st.js  task.js  test_api_gen.js
fp/browser/: ajax.js  dom.js  upload.js
fp/bubblesort/: bubble.js
fp/quicksort/: quicksort.beam  quicksort.erl  quicksort.hs  quicksort.js  quicksort.py  quicksort.rb
fp/rx/: index.js  test_rx.js
fp/scf/: index.js  readme.md  test.js  trigger.js
fp/select_sort/: index.js
io/: index.js  load_js.js  readme.md  test_walk_dir.js  toml.js  walk_dir.js
log/: access.js  index.js  test.js
middleware/: body.js  boom.js  code.json  common-error.js  cors.js  db.js  err.js  index.js  json.js  log.js  minify.js  mix.js  pack.js  readme.md  redis.js  sign.js  sms.js  static.js  test_ua.js  token.js  ua.js  upload.js
mq/co/: co.js
mq/rabbit/: send.js
mqtt/: client.js  index.js  package-lock.json  start_ws.sh
mqtt/www/: index.html  index.js
msg/: master.js  worker.js
nano/: hserver.js  multisub.js  pipeline.js  pubsub.js  rep.js  req.js  sub.html  sub.js  sub1.html  sub1.js
nano/tmp/: nano-c.js  nano.js
nano/ws/: index.html  server.js
passport/weibo/: index.js  readme.md  test.js
passport/wx/: index.js  readme.md
passport/wx-mini/: api.js  msg.json  readme.md  user.js
push/: index.js  io.js  middleware.js  package.json
push/router/: index.js
qcloud/: index.js  readme.md  test.js  v2.js  v3.js
qcloud/apigw-sign/rust/: Cargo.toml
qcloud/apigw-sign/rust-wasm/: Cargo.toml  index.js  package.json  readme.md
qcloud/apigw-sign/rust-wasm/src/: lib.rs
qcloud/apigw-sign/rust/src/: main.rs  sha1.rs  time.rs
qcloud/sign/rust/: Cargo.toml
qcloud/sign/rust/src/: main.rs
qr/: decode.js
router/: gen_api.js  router.js
rsocket/: package.json
scf/: 1.sh  config2env.js  deploy.js  index.js  read_config.js
scripts/: decrypt_secret.sh  encrypt_secret.sh  readme.md
sms/: index.js  readme.md  test.js
spider/: ajax.js  form.js  parse_curl.js  parse_html.js  table.js
spider/chinalaw/rust/: Cargo.toml
spider/chinalaw/rust/ocr/: Cargo.toml
spider/chinalaw/rust/ocr/src/: baidu.rs  lib.rs
spider/chinalaw/rust/src/: main.rs
spider/chinalaw/rust/src/test/: get.rs  test.rs
token/: index.js  readme.md  test_token.js
travis/: index.js
validate/: index.js  joi.js  mongo_id.js  test.js  test_joi.js
wasm/: index.js
wasm/hello-wasm/: Cargo.toml  index.html  index.js  index1.js  package.json  readme.md
wasm/hello-wasm/src/: lib.rs
(+319 files in other folders)
