[package]
name = "rust"
version = "0.1.0"
authors = ["小舟从此逝 <kopor_oo@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
chrono = "0.4.11"
bson = "0.14.1"
mongodb = "0.9.2"
log = "0.4.8"
serde_json = "1.0.50"
serde = "1.0.105"
serde_derive = "1.0.105"
