[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "rust-wasm"
version = "0.1.0"
authors = ["birdsofsummer <kopor_oo@qq.com>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/birdsofsummer/hello-wasm"

[lib]
crate-type = ["cdylib"]
proc-macro = true

[dependencies]
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
hmac-sha1 = "0.1.3"
#rust-crypto = "0.2.36"
#hmac-sha256 = "0.1.2"

#bytes = "0.5.4"
chrono = "0.4.11"
base64 = "0.12.0"
rand = "0.7.3"
crate = "0.0.2"
serde = "1.0.106"
serde_json = "1.0.50"
serde_derive = "1.0.106"
#async-std = "1.5.0"
# femme = "1.3.0"
# log = "0.4.8"
# headers = "0.3.2"
# lazy_static = "1.4.0"
 cookie = "0.13.3"
http = "0.2.1"
regex = "1.3.6"
# surf = "1.0.3"
# url = "2.1.1" 
# futures = "0.3.4"
reqwest = { version = "0.10.4", features = ["json","cookies"] }
tokio = { version = "0.2.16", features = ["full"] }
wasm-bindgen-futures = "0.4.10"
wasm-pack = "0.9.1"
#sys = "0.0.0"
js-sys = "0.3.37"


# https://rustwasm.github.io/wasm-bindgen/api/web_sys/
[dependencies.web-sys]
version = "0.3.37"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ReferrerPolicy',
  'Response',
  'Window',
  'Url',
  'UrlSearchParams',
]

