[package]
name = "sign"
version = "0.1.0"
authors = ["birdsofsummer <1052334039@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
base64 = "0.11.0"
rust-crypto = "0.2.36"
hmac-sha1 = "0.1.3"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"
