[package]
name = "rust"
version = "0.1.0"
authors = ["小舟从此逝 <kopor_oo@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.10"
base64 = "0.11.0"
rust-crypto = "0.2.36"
hmac-sha1 = "0.1.3"
rand = "0.7.3"
url = "2.1.1"
#js-sys = "0.3.35"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"
