[package]
name = "rs"
version = "0.1.0"
authors = ["小舟从此逝 <kopor_oo@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
serde = "1.0.104"
serde_json = "1.0.48"
async-std = "1.5.0"
femme = "1.3.0"
log = "0.4.8"
futures = "0.3.4"
serde_derive = "1.0.104"
headers = "0.3.2"
bytes = "0.5.4"
chrono = "0.4.11"
base64 = "0.12.0"
rand = "0.7.3"
url = "2.1.1" 
ocr= { path = "ocr" }
crate = "0.0.2"
lazy_static = "1.4.0"
cookie = "0.13.3"
http = "0.2.0"
reqwest = { version = "0.10.4", features = ["json","cookies"] }
tokio = { version = "0.2.13", features = ["full"] }
